# todoist-cli

./: .gitignore  Cargo.toml  LICENSE  README.MD
src/: main.rs
src/api/: client.rs
src/cli/: commands.rs
src/controller/: app.rs
src/db/: cache.rs
src/models/: task.rs
src/utils/: error.rs
